syntax = "proto3";

package tag.v1;
option go_package = "tag/v1;tagv1";

import "tag/v1/tag.proto";
import "sort/v1/sort.proto";

import "validate/validate.proto";

service TagService {
    rpc CreateTag(CreateTagRequest) returns (CreateTagResponse);
    rpc ListTags(ListTagsRequest) returns (ListTagsResponse);
}

message CreateTagRequest {
    string tag_name = 1 [(validate.rules).string = { min_len: 3, max_len: 15 }]; // required
}

message CreateTagResponse {
    Tag tag = 1;
}

message ListTagsRequest {
    message Sort {
        sort.v1.SortDirection created_at = 4;
    }

    string search = 1;
    int32 last_id = 2;
    int32 page_size = 3;
    Sort sort = 4;
}

message ListTagsResponse {
    repeated Tag tags = 1;
    bool has_next = 2;
}